// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lint-staged > should override the default config 1`] = `
{
  "*.(js|jsx|json)": [
    "next lint",
  ],
  "*.css": [
    "foundry run stylelint --fix",
  ],
  "*.jsx?": [
    "custom command",
  ],
}
`;

exports[`lint-staged > with options > should return a config for { language: 'JavaScript' } 1`] = `
{
  "*.(js|jsx|json)": [
    "foundry run eslint --fix",
  ],
  "*.css": [
    "foundry run stylelint --fix",
  ],
}
`;

exports[`lint-staged > with options > should return a config for { language: 'TypeScript' } 1`] = `
{
  "*.(js|jsx|json|ts|tsx)": [
    "foundry run eslint --fix",
  ],
  "*.(ts|tsx)": [Function],
  "*.css": [
    "foundry run stylelint --fix",
  ],
}
`;
